Fix: Moved navbar to the top of the screen for mobile landscape. When at the bottom, it gets pushed off screen by the browser navbar.

--- a/css/style.scss
+++ b/css/style.scss
@@ -382,7 +382,7 @@ img {
 	}
 
 	.intro {
-		top: 10%;
+		top: 17%;
 		height: 70%;
 		.title {
 			font-size: 1em;
@@ -421,7 +421,7 @@ img {
 
 	.header {
 		position: absolute;
-		bottom: 0;
+		top: 2%;
 		right:0;
 		width: 90%;
 		padding: 0;
@@ -467,7 +467,7 @@ img {
 	}
 
 	.intro {
-		top: 10%;
+		top: 17%;
 		height: 80%;
 		.title {
 			font-size: 1.25em;
@@ -477,7 +477,7 @@ img {
 	.intro .profile-pic {
 		width: 15vw;
 		height: 15vw;
-		border: 5px solid #ffffff;
+		border: 4px solid #ffffff;
 		border-radius: 15vw;
 		background: url(../images/ben_xsm.jpg) center;
 		background-size: cover;
@@ -505,7 +505,7 @@ img {
 
 	.header {
 		position: absolute;
-		bottom: 0;
+		top: 2%;
 		right:0;
 		width: 80%;
 		padding: 0;
@@ -561,7 +561,7 @@ img {
 	.intro .profile-pic {
 		width: 40vw;
 		height: 40vw;
-		border: 5px solid #ffffff;
+		border: 3px solid #ffffff;
 		border-radius: 40vw;
 		margin-bottom: 10%;
 		background: url(../images/ben_sm.jpg) center;
@@ -652,7 +652,7 @@ img {
 	.intro .profile-pic {
 		width: 40vw;
 		height: 40vw;
-		border: 5px solid #ffffff;
+		border: 4px solid #ffffff;
 		border-radius: 40vw;
 		margin-bottom: 10%;
 		background: url(../images/ben_1x.jpg) center;
